# LazyAccount

./: Account.toml  Cargo.toml  docker-compose.yml
crates/erc7579/: Cargo.toml
crates/erc7579/src/: account.rs  lib.rs  types.rs
src/: config.rs  main.rs
