[package]
name = "LazyAccount"
version = "0.1.0"
edition = "2021"

[dependencies]
erc7579 = {path ="crates/erc7579"}
alloy-contract = { version = "0.2" }
alloy-network = { version = "0.2"}
alloy-provider = { version = "0.2"}
alloy-primitives = {version = "0.7", features = ["serde"]}
alloy-sol-types = { version = "0.7", features = ["json"] }
alloy-signer = "0.2"
alloy-signer-local = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
tokio = { version= "1.38", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
